event-monitor/k8s/soaring-avro-event-monitor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: soaring-avro-event-monitor-ms
  namespace: soaring-clouds
  labels:
    k8s-app: soaring-avro-event-monitor-ms
    kubernetes.io/name: "soaring-avro-event-monitor-ms"
spec:
  ports:
  - name: api
    port: 8499
    protocol: TCP
    targetPort: api
  type: NodePort
  selector:
    k8s-app: soaring-avro-event-monitor-ms
