event-monitor/k8s/soaring-avro-event-monitor-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: soaring-avro-event-monitor
  namespace: soaring-clouds
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /soaring/avroeventmonitor
        backend:
          serviceName: soaring-avro-event-monitor-ms
          servicePort: api
